fix: add horizontal overflow to code blocks

--- a/static/main.css
+++ b/static/main.css
@@ -26,6 +26,7 @@ h1 { font-size: 2.5rem }
 h3 { margin-top: 4rem }
 
 pre {
+    overflow-x: auto;
     padding: 1.5rem 1rem;
     border-top: 1px solid #444;
     border-bottom: 1px solid #444;
